refactor: add validation and preparing endpoint to give or denied access and permissions